@@ -57,7 +57,7 @@
         <menuitem class="firegpg-menu-verif menuitem-iconic" label="&firegpgMenu.labelVerif;" oncommand="firegpg.onMenuItemCommand(event,'VERIF')"/>
         <menuseparator/>
         <menuitem class="firegpg-menu-crypt menuitem-iconic" label="&firegpgMenu.labelCrypt;" oncommand="firegpg.onMenuItemCommand(event,'CRYPT')"/>	
-        <menuitem class="firegpg-menu-dcrypt menuitem-iconic" label="&firegpgMenu.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DCRYPT')"/>
+        <menuitem class="firegpg-menu-decrypt menuitem-iconic" label="&firegpgMenu.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DECRYPT')"/>
         <menuseparator/>
         <menuitem class="firegpg-menu-options menuitem-iconic" label="&firegpgMenu.labelOptions;" oncommand="firegpg.onMenuItemCommand(event,'OPTS')"/>
 <menuitem style="display: none;" id="firegpg-menu-memo-menu" class="firegpg-menu-rease menuitem-iconic" label="&firegpgMenu.labelErase;" oncommand="firegpg.onMenuItemCommand(event,'ERASE')"/>
@@ -73,7 +73,7 @@
         <menuitem class="firegpg-menu-verif menuitem-iconic" label="&firegpgContext.labelVerif;" oncommand="firegpg.onMenuItemCommand(event,'VERIF')"/>
         <menuseparator/>
         <menuitem class="firegpg-menu-crypt menuitem-iconic" label="&firegpgContext.labelCrypt;" oncommand="firegpg.onMenuItemCommand(event,'CRYPT')"/>	
-        <menuitem class="firegpg-menu-dcrypt menuitem-iconic" label="&firegpgContext.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DCRYPT')"/>
+        <menuitem class="firegpg-menu-decrypt menuitem-iconic" label="&firegpgContext.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DECRYPT')"/>
         <menuseparator/>
         <menuitem class="firegpg-menu-options menuitem-iconic" label="&firegpgContext.labelOptions;" oncommand="firegpg.onMenuItemCommand(event,'OPTS')"/>
         <menuitem style="display: none;" id="firegpg-menu-memo-pop" class="firegpg-menu-rease menuitem-iconic" label="&firegpgContext.labelErase;" oncommand="firegpg.onMenuItemCommand(event,'ERASE')"/>
@@ -88,7 +88,7 @@
         <menuitem class="firegpg-menu-verif menuitem-iconic" label="&firegpgToolbar.labelVerif;" oncommand="firegpg.onMenuItemCommand(event,'VERIF')"/>
         <menuseparator/>
           <menuitem class="firegpg-menu-crypt menuitem-iconic" label="&firegpgToolbar.labelCrypt;" oncommand="firegpg.onMenuItemCommand(event,'CRYPT')"/>	
-          <menuitem class="firegpg-menu-dcrypt menuitem-iconic" label="&firegpgToolbar.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DCRYPT')"/>
+          <menuitem class="firegpg-menu-decrypt menuitem-iconic" label="&firegpgToolbar.labelDecry;" oncommand="firegpg.onMenuItemCommand(event,'DECRYPT')"/>
         <menuseparator/>
         <menuitem class="firegpg-menu-options menuitem-iconic" label="&firegpgToolbar.labelOptions;" oncommand="firegpg.onMenuItemCommand(event,'OPTS')"/>
 
