@@ -3,6 +3,6 @@ signFailedPassword=La signature à échouée car le mot de passe incorrect.
 verifFailed=L'authenticité de cette signature ne peut pas être vérifié.
 verifSuccess=Cette signature est valide. Elle appartient à 
 cryptFailed=Erreur inconnue, chiffrement a échoué.
-dcryptFailed=Erreur inconnue, le déchiffrement a échoué.
-dcryptFailedPassword=Le déchiffrement a échoué car le mot de passe incorrect.
+decryptFailed=Erreur inconnue, le déchiffrement a échoué.
+decryptFailedPassword=Le déchiffrement a échoué car le mot de passe incorrect.
 passwordDialogEnterPrivateKey=Entrez votre clé privée :
